--- a/StringCalculatorSamples/StringCalculatorTests/StringCalculatorTests.csproj
+++ b/StringCalculatorSamples/StringCalculatorTests/StringCalculatorTests.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExceptionMessageMaker.cs" />
-    <Compile Include="NegativeChecker.cs" />
-    <Compile Include="StringCalculatorSRPAfter.cs" />
+    <Compile Include="StringCalcAfterSrp\ExceptionMessageMaker.cs" />
+    <Compile Include="StringCalcAfterSrp\NegativeChecker.cs" />
+    <Compile Include="StringCalcAfterSrp\NumberParser.cs" />
+    <Compile Include="StringCalcAfterSrp\StringCalculatorSRPAfter.cs" />
     <Compile Include="StringCalculatorSrpBefore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringCalcAfterSrp\Tokenizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
