--- a/GildedRoseSolution/src/GildedRose.Console/GildedRose.Console.csproj
+++ b/GildedRoseSolution/src/GildedRose.Console/GildedRose.Console.csproj
@@ -45,8 +45,8 @@
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QualityStrategies\QualityAdjustmentStrategy.cs" />
-    <Compile Include="QualityStrategies\QualityAdjustStrategySelector.cs" />
+    <Compile Include="QualityStrategies\AgedBrieQualityStrategy.cs" />
+    <Compile Include="QualityAdjustStrategySelector.cs" />
     <Compile Include="QualityStrategies\SulfurasQualityAdjustmentStrategy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
