extrat SRP DayReport

--- a/GildedRose/GildedRose.csproj
+++ b/GildedRose/GildedRose.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgedBrieStrategy.cs" />
+    <Compile Include="DayReporter.cs" />
     <Compile Include="IQualityStrategy.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
